fix(Tenant): align info in overview

--- a/src/containers/Tenant/Diagnostics/DetailedOverview/DetailedOverview.scss
+++ b/src/containers/Tenant/Diagnostics/DetailedOverview/DetailedOverview.scss
@@ -1,3 +1,6 @@
+$section-title-margin: 20px;
+$section-title-line-height: 24px;
+
 .kv-detailed-overview {
     display: flex;
     gap: 20px;
